plugins {
    id 'java'
    id 'idea'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    sourceCompatibility = 1.10
    targetCompatibility = 1.10

    clean {
        delete 'build', 'out', 'classes'
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.10.2'
    distributionType = Wrapper.DistributionType.ALL
}

project.test.dependsOn {
    rootProject.subprojects.collect {
        it.tasks.getByName 'test'
    }
}

ext {
    libs = [
            test : 'org.testng:testng:7.0.0-beta1'
    ]
}